terraform/vpc.tf
#vpc resource
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "vpc-arun"
  }
}
